iptables-new
# Generated by xtables-save v1.8.2 on Tue Jul 14 14:32:48 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-b9f3b7d4843b -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -d 172.18.0.2/32 -p tcp -m tcp --dport 5432 -j MASQUERADE
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-b9f3b7d4843b -j RETURN
-A DOCKER ! -i br-b9f3b7d4843b -p tcp -m tcp --dport 25432 -j DNAT --to-destination 172.18.0.2:5432
COMMIT
# Completed on Tue Jul 14 14:32:48 2020
# Generated by xtables-save v1.8.2 on Tue Jul 14 14:32:48 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A DOCKER -d 172.18.0.2/32 ! -i br-b9f3b7d4843b -o br-b9f3b7d4843b -p tcp -m tcp --dport 5432 -j ACCEPT
COMMIT
# Completed on Tue Jul 14 14:32:48 2020
